@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -76,7 +76,7 @@ public class DoubleJVMOption extends JVMOption {
      */
     @Override
     void setMin(String min) {
-        this.min = new Double(min);
+        this.min = Double.valueOf(min);
     }
 
     /**
@@ -96,7 +96,7 @@ public class DoubleJVMOption extends JVMOption {
      */
     @Override
     void setMax(String max) {
-        this.max = new Double(max);
+        this.max = Double.valueOf(max);
     }
 
     /**
